# spirographicals

./: .clang-format  CMakeLists.txt  LICENSE.md  Makefile  README.md  pyproject.toml  rustfmt.toml
.github/workflows/: build.yml
api/examples/: simple_spirograph.py
api/src/spirographicals/: __init__.py  objects.py  pyplot.py
cmake/: spirographicals-config.cmake.in
core/: CMakeLists.txt
core/include/spirographicals/: Spirographicals.hpp  spirographicals.h
core/src/: api.cpp
core/tests/: CMakeLists.txt  test_primitives.cpp
logic/: Cargo.toml
logic/spiro-core-sys/: Cargo.toml  build.rs
logic/spiro-logic/: Cargo.toml
logic/spiro-logic/src/: data.rs  lib.rs
scripts/: build_core.py  build_logic.py  clean.py  package.py  run_tests.py
