# logic/spiro-logic/Cargo.toml

[package]
name = "spiro-logic"
version = "0.1.0"
edition = "2021"
authors = ["Aitzaz Imtiaz"]
description = "Safe Rust logic and Python bindings for the Spirographicals library."
license-file = "../../LICENSE.md"

[lib]
name = "spirographicals"
crate-type = ["cdylib"]

[dependencies]
# Updated PyO3 version to one that supports Python 3.13
pyo3 = { version = "0.22.0", features = ["extension-module"] }
spiro-core-sys = { path = "../spiro-core-sys", version = "0.1.0" }
